--- a/src/client/GalleryPixels.UI/_Imports.razor
+++ b/src/client/GalleryPixels.UI/_Imports.razor
@@ -5,3 +5,4 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using GalleryPixels.UI
+@using GalleryPixels.UI.Pages
