Temp kinda working img grid

--- a/src/client/GalleryPixels.UI/MainLayout.razor
+++ b/src/client/GalleryPixels.UI/MainLayout.razor
@@ -2,8 +2,8 @@
 @inject IJSRuntime Js
 @inject NavigationManager MyNavigationManager
 
-<div class="min-h-screen flex flex-col">
-    <main class="flex flex-1 justify-center overflow-x-hidden">
+<div class="">
+    <main class="">
         <article>
             @Body
         </article>
