--- a/src/client/GalleryPixels.UI/Pages/Index.razor
+++ b/src/client/GalleryPixels.UI/Pages/Index.razor
@@ -1,3 +1,45 @@
 ﻿@page "/"
+@using GalleryPixels.UI.Masonry
+@using GalleryPixels.UI.Domain.Services
+@using GalleryPixels.UI.Domain.Models
+@inject IMasonryGrid MasonryGrid
+@inject IImagePlaceHolderService ImageService
 
-<h1>Hello, dev branch!</h1>
+<div class="grid">
+    @foreach (var media in Media)
+    {
+        <div class="grid-item w-full md:w-1/2 lg:w-1/3 2xl:w-1/4">
+              <div class="relative mb-4 before:content-[''] before:rounded-md before:absolute before:inset-0 before:bg-black before:bg-opacity-20">
+                <img class="w-full rounded-md" src="@media.Url">
+                <div class="test__body absolute inset-0 p-8 text-white flex flex-col">
+                  <div class="relative">
+                    <a class="test__link absolute inset-0" target="_blank" href="/"></a>
+                    <h1 class="test__title text-3xl font-bold mb-3">Title post</h1>
+                    <p class="test__author font-sm font-light">Author</p>
+                  </div>
+                  <div class="mt-auto">
+                    <span class="test__tag bg-white bg-opacity-60 py-1 px-4 rounded-md text-black">#tag</span>
+                  </div>
+                </div>
+              </div>
+        </div>   
+    }
+</div>
+
+@code
+{
+    List<Media> Media { get; set; } = new();
+
+    protected override void OnInitialized()
+    {
+        for (var i = 0; i < 50; i++)
+        {
+            Media.Add(ImageService.GetRandomImagePlaceHolder());
+        }
+    }
+
+    protected override async Task OnAfterRenderAsync(bool firstRender)
+    {
+        await MasonryGrid.Init(".grid", ".grid-item", 30);
+    }
+}
