Some improvement with the annoying masonry grid

--- a/src/client/GalleryPixels.UI/MainLayout.razor
+++ b/src/client/GalleryPixels.UI/MainLayout.razor
@@ -2,11 +2,9 @@
 @inject IJSRuntime Js
 @inject NavigationManager MyNavigationManager
 
-<div class="">
-    <main class="">
-        <article>
-            @Body
-        </article>
+<div class="min-h-screen flex flex-col">
+    <main class="flex flex-1 justify-center overflow-x-hidden">
+        @Body
     </main>
 </div>
 
