--- a/src/client/GalleryPixels.UI/Pages/Index.razor
+++ b/src/client/GalleryPixels.UI/Pages/Index.razor
@@ -5,25 +5,25 @@
 @inject IMasonryGrid MasonryGrid
 @inject IImagePlaceHolderService ImageService
 
-<div class="grid">
-    @foreach (var media in Media)
+<div class="container">
+    @for (var i = 0; i < Media.Count; i++)
     {
-        <div class="grid-item w-full sm:w-1/2 lg:w-1/3 2xl:w-1/4">
-            <div class="relative mb-4 before:content-[''] before:rounded-md before:absolute before:inset-0 before:bg-black before:bg-opacity-20">
-                <img class="w-full rounded-md" src="@media.Url">
+        <div class="w-[100%] md:w-[40%] 2xl:w-[25%]">
+            <div style="width: @(Media[i].Width)px; height: @(Media[i].Height)px;">
+                <img class="lazyload rounded-md" data-src="@Media[i].Url">
             </div>
         </div>
     }
 </div>
 
-
 @code
 {
-    List<Media> Media { get; set; } = new();
+        private const string MasonryGridId = "container";
+    private List<Media> Media { get; set; } = new();
 
     protected override void OnInitialized()
     {
-        for (var i = 0; i < 50; i++)
+        for (var i = 0; i < 10; i++)
         {
             Media.Add(ImageService.GetRandomImagePlaceHolder());
         }
@@ -31,21 +31,6 @@
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
-        await MasonryGrid.Init(".grid", ".grid-item", 30);
+        await MasonryGrid.InitAsync($".{MasonryGridId}", 20, Media.Count);
     }
 }
-
-
-@* <div class="relative mb-4 before:content-[''] before:rounded-md before:absolute before:inset-0 before:bg-black before:bg-opacity-20"> *@
-@*     <img class="w-full rounded-md" src="https://source.unsplash.com/random/1"> *@
-@*     <div class="test__body absolute inset-0 p-8 text-white flex flex-col"> *@
-@*         <div class="relative"> *@
-@*             <a class="test__link absolute inset-0" target="_blank" href="/"></a> *@
-@*             <h1 class="test__title text-3xl font-bold mb-3">Title post</h1> *@
-@*             <p class="test__author font-sm font-light">Author</p> *@
-@*         </div> *@
-@*         <div class="mt-auto"> *@
-@*             <span class="test__tag bg-white bg-opacity-60 py-1 px-4 rounded-md text-black">#tag</span> *@
-@*         </div> *@
-@*     </div> *@
-@* </div> *@
