--- a/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
@@ -8,20 +8,24 @@
     @foreach (var media in Media)
     {
         <div class="w-[100%] md:w-[40%] 2xl:w-[25%]" @onclick="() => ShowModal(media.Url)">
-            <img class="lazyload rounded-md w-full object-cover cursor-pointer" data-src="@media.Url" width="@media.Width" height="@media.Height" alt="">
+            <img class="lazyload rounded-md w-full object-contain cursor-pointer" data-src="@media.Url" width="@media.Width" height="@media.Height" alt="">
         </div>
     }
 </div>
 
 <!-- Img modal -->
 <div class="@(_showModal ? "" : "hidden") fixed top-0 left-0 z-80 w-screen h-screen bg-black/70 flex justify-center items-center">
-    <!-- The close button -->
-    <div class="fixed inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
-    <a class="fixed z-90 top-4 right-8 text-white text-5xl font-bold cursor-pointer" @onclick="CloseModal">
-        &times;
-    </a>
+    <!--  Clickable close background -->
+    <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
-    <img class="object-cover h-[90%] transform" src="@ModalImg" alt=""/>
+    <img class="object-contain h-auto w-full transform" src="@ModalImg" alt=""/>
+
+    <!-- The close button -->
+    <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-5xl font-bold cursor-pointer" @onclick="CloseModal">
+        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x">
+            <line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line>
+        </svg>
+    </a>
 </div>
 
 @code
