--- a/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
@@ -7,18 +7,18 @@
 <div class="@MasonryGridId" style="width: 100% !important;">
     @foreach (var media in Media)
     {
-        <div class="w-[100%] md:w-[40%] 2xl:w-[25%]" @onclick="() => ShowModal(media.Url)">
+        <div class="w-[100%] md:w-[40%] 2xl:w-[25%]" @onclick="() => ShowModal(media)">
             <img class="lazyload rounded-md w-full object-contain cursor-pointer" data-src="@media.Url" width="@media.Width" height="@media.Height" alt="">
         </div>
     }
 </div>
 
 <!-- Img modal -->
-<div class="@(_showModal ? "" : "hidden") fixed top-0 left-0 z-80 w-screen h-screen bg-black/70 flex justify-center items-center">
+<div class="@(_showModal && ModalImg != null ? "" : "hidden") fixed top-0 left-0 z-80 w-screen h-screen bg-black/70 flex justify-center items-center">
     <!--  Clickable close background -->
     <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
-    <img class="object-contain h-auto max-h-full w-full transform" src="@ModalImg" alt=""/>
+    <img class="object-contain h-full max-w-full transform" src="@ModalImg?.Url" alt=""/>
 
     <!-- The close button -->
     <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-5xl font-bold cursor-pointer" @onclick="CloseModal">
@@ -33,7 +33,7 @@
     private bool _showModal = false;
     private List<Media> Media { get; set; } = new();
     private string MasonryGridId { get; set; } = "masonry";
-    private string ModalImg { get; set; } = "https://cdn.brammys.com/2023/09/w94gGyu2CFp0yayWHSD2rRRofs4wICxzSQEvu2Ifqny6PqvegGTpyhchiCWGf38u.png";
+    private Media? ModalImg { get; set; }
 
     protected override void OnInitialized()
     {
@@ -48,9 +48,9 @@
         await MagicGrid.InitAsync($".{MasonryGridId}", 30, Media.Count);
     }
 
-    private void ShowModal(string url)
+    private void ShowModal(Media media)
     {
-        ModalImg = url;
+        ModalImg = media;
         _showModal = true;
     }
 
