--- a/src/client/GalleryPixels.UI/_Imports.razor
+++ b/src/client/GalleryPixels.UI/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using BlazorPro.BlazorSize
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
