--- a/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
@@ -9,7 +9,7 @@
 <div class="@MasonryGridId" style="width: 100% !important;">
     @foreach (var media in Media)
     {
-        <div class="flex justify-center items-center max-w-3xl w-[100%] lg:w-[40%] 2xl:w-[25%] px-6 lg:px-0" @onclick="() => ShowModal(media)">
+        <div class="flex justify-center items-center max-w-3xl w-[100%] md:w-[40%] 2xl:w-[25%] px-6 md:px-0" @onclick="() => ShowModal(media)">
             <!--suppress RequiredAttributes -->
             <img class="lazyload rounded-md w-full object-contain cursor-pointer" data-src="@media.Url" width="@media.Width" height="@media.Height" alt="">
         </div>
@@ -21,7 +21,7 @@
     <!--  Clickable close background -->
     <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
-    <img class="@(ModalScale > 1 ? $"scale-[{ModalScale}]" : "") p-4 max-h-[90%] max-w-[90%] object-contain transform" src="@ModalImg?.Url" alt=""/>
+    <img class="@(ModalScale > 1 ? $"scale-[{ModalScale}]" : "") p-4 max-h-full max-w-full object-contain transform" src="@ModalImg?.Url" alt=""/>
 
     <!-- The close button -->
     <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-5xl font-bold cursor-pointer" @onclick="CloseModal">
