--- a/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
@@ -21,7 +21,7 @@
     <!--  Clickable close background -->
     <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
-    <img class="@(ModalScale > 1 ? $"scale-[{ModalScale}]" : "") p-4 max-h-full max-w-full object-contain transform" src="@ModalImg?.Url" alt=""/>
+    <img style="@(ModalScale > 1 ? $"--tw-scale-x: {ModalScale}; --tw-scale-y: {ModalScale}" : "")" class="p-4 max-h-full max-w-full object-contain transform" src="@ModalImg?.Url" alt=""/>
 
     <!-- The close button -->
     <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-5xl font-bold cursor-pointer" @onclick="CloseModal">
