--- a/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
@@ -4,6 +4,7 @@
 @using GalleryPixels.UI.Domain.Models
 @using GalleryPixels.UI.Domain.Services
 @using GalleryPixels.UI.Application.Services
+@using System.Globalization
 @implements IDisposable
 
 <div class="@MasonryGridId" style="width: 100% !important;">
@@ -21,7 +22,7 @@
     <!--  Clickable close background -->
     <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
-    <img style="@(ModalScale > 1 ? $"--tw-scale-x: {ModalScale}; --tw-scale-y: {ModalScale}" : "")" class="p-4 max-h-full max-w-full object-contain transform" src="@ModalImg?.Url" alt=""/>
+    <img style="@(ModalScale > 1 ? $"--tw-scale-x: {ModalScale.ToString(_numberCultureInfo)}; --tw-scale-y: {ModalScale.ToString(_numberCultureInfo)}" : "")" class="p-4 max-h-full max-w-full object-contain transform" src="@ModalImg?.Url" alt=""/>
 
     <!-- The close button -->
     <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-5xl font-bold cursor-pointer" @onclick="CloseModal">
@@ -33,11 +34,13 @@
 
 @code
 {
-    private List<Media> Media { get; set; } = new();
     private string MasonryGridId { get; set; } = "masonry";
+    private List<Media> Media { get; set; } = new();
     private Media? ModalImg { get; set; }
+
     private double ModalScale { get; set; }
     private BrowserWindowSize? Window { get; set; }
+    private static CultureInfo _numberCultureInfo = new("en-US");
 
     protected override void OnInitialized()
     {
