--- a/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/MasonryGrid.razor
@@ -30,6 +30,23 @@
             <line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line>
         </svg>
     </a>
+
+    <!-- The zoom button -->
+    <a class="fixed z-90 top-4 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-2xl font-bold flex space-x-2 leading-none">
+        <div class="cursor-pointer" @onclick="ZoomInClicked">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus-circle">
+                <circle cx="12" cy="12" r="10"></circle><line x1="12" y1="8" x2="12" y2="16"></line><line x1="8" y1="12" x2="16" y2="12"></line>
+            </svg>
+        </div>
+        <span class="leading-5">@((ModalScale * 100).ToString("0", _numberCultureInfo))%</span>
+        <div class="cursor-pointer" @onclick="ZoomOutClicked">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-minus-circle">
+                <circle cx="12" cy="12" r="10"></circle><line x1="8" y1="12" x2="16" y2="12"></line>
+            </svg>
+        </div>
+    </a>
+
+
 </div>
 
 @code
@@ -70,9 +87,6 @@
 
         if (ModalScale < 1)
             ModalScale = 1;
-        
-        Console.WriteLine($"Window resized to {Window.Width}x{Window.Height}");
-        Console.WriteLine($"Modal scale set to {ModalScale}");
     }
 
     private void ShowModal(Media media)
@@ -91,6 +105,22 @@
         Window = window;
         SetModalScale();
         StateHasChanged();
+    }
+
+    private void ZoomInClicked()
+    {
+        ModalScale += 0.1;
+        
+        if (ModalScale > 5)
+            ModalScale = 5;
+    }
+
+    private void ZoomOutClicked()
+    {
+        ModalScale -= 0.1;
+        
+        if (ModalScale < 1)
+            ModalScale = 1;
     }
 
     void IDisposable.Dispose()
