--- a/src/client/GalleryPixels.UI/Shared/ImageModal.razor
+++ b/src/client/GalleryPixels.UI/Shared/ImageModal.razor
@@ -8,9 +8,15 @@
     <!--  Clickable close background -->
     <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
-    <img style="@(ModalScale > 1 ? $"--tw-scale-x: {ModalScale.ToString(NumberCultureInfo)}; --tw-scale-y: {ModalScale.ToString(NumberCultureInfo)}" : "")"
-         class="max-h-full max-w-full object-contain transform" src="@ModalImg?.Url" alt=""
-         @onmousedown="Callback"/>
+    <img style="@(ModalScale > 1 ? GetScaleStyle() : string.Empty) @GetTranslatePos()"
+         class="max-h-full max-w-full object-contain transform cursor-grab select-none drag-none @(_panning ? "cursor-grabbing" : string.Empty)"
+         src="@ModalImg?.Url"
+         alt=""
+         draggable="false"
+         @onmousedown="MouseDown"
+         @onmousemove="MouseMove"
+         @onmouseup="MouseUp"
+         @ondblclick="OnDoubleClick"/>
 
     <!-- The close button -->
     <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark text-5xl font-bold cursor-pointer"
@@ -54,10 +60,12 @@
     private double ModalScale { get; set; }
     private BrowserWindowSize? Window { get; set; }
     private static readonly CultureInfo NumberCultureInfo = new("en-US");
+    private double _mouseStartX, _mouseStartY, _translateX, _translateY, _previousTranslateX, _previousTranslateY;
+    private bool _panning;
 
     protected override void OnAfterRender(bool firstRender)
     {
-        if (!firstRender) 
+        if (!firstRender)
             return;
 
         Listener.OnResized += WindowResized;
@@ -93,10 +101,7 @@
 
     private void ZoomInClicked()
     {
-        ModalScale += 0.1;
-
-        if (ModalScale > 5)
-            ModalScale = 5;
+        ZoomIn(0.1);
     }
 
     private void ZoomOutClicked()
@@ -112,7 +117,52 @@
         Listener.OnResized -= WindowResized;
     }
 
-    private static void Callback(MouseEventArgs obj)
+    private string GetScaleStyle()
+        => $"--tw-scale-x: {ModalScale.ToString(NumberCultureInfo)}; --tw-scale-y: {ModalScale.ToString(NumberCultureInfo)};";
+
+    private string GetTranslatePos()
+        => $"--tw-translate-x: {_translateX.ToString(NumberCultureInfo)}px; --tw-translate-y: {_translateY.ToString(NumberCultureInfo)}px;";
+
+    private void MouseDown(MouseEventArgs mouseEvent)
     {
+        if (_panning)
+            return;
+
+        _panning = true;
+        _mouseStartX = mouseEvent.ClientX - _previousTranslateX;
+        _mouseStartY = mouseEvent.ClientY - _previousTranslateY;
+    }
+
+    private void MouseMove(MouseEventArgs mouseEvent)
+    {
+        if (!_panning)
+            return;
+
+        var offsetX = mouseEvent.ClientX - _mouseStartX;
+        var offsetY = mouseEvent.ClientY - _mouseStartY;
+
+        _translateX = offsetX;
+        _translateY = offsetY;
+    }
+
+    private void MouseUp(MouseEventArgs mouseEvent)
+    {
+        _panning = false;
+
+        _previousTranslateX = _translateX;
+        _previousTranslateY = _translateY;
+    }
+
+    private void OnDoubleClick(MouseEventArgs obj)
+    {
+        ZoomIn(1);
+    }
+
+    private void ZoomIn(double value)
+    {
+        ModalScale += 1;
+
+        if (ModalScale > 5)
+            ModalScale = 5;
     }
 }
