Tailwind CSS upgrade command

--- a/src/client/GalleryPixels.UI/Pages/Error404.razor
+++ b/src/client/GalleryPixels.UI/Pages/Error404.razor
@@ -10,7 +10,7 @@
             </div>
             <h2 class="mt-8 text-xl lg:text-5xl">Page not found!</h2>
             <p class="mt-6 text-sm lg:text-base">Sorry, we couldn't find the page you're looking for.</p>
-            <a href="/" class="mt-6 bg-error dark:bg-error-dark hover:opacity-80 text-on-error dark:text-on-error-dark font-light py-4 px-6 inline-block rounded shadow-md">Go back home</a>
+            <a href="/" class="mt-6 bg-error dark:bg-error-dark hover:opacity-80 text-on-error dark:text-on-error-dark font-light py-4 px-6 inline-block rounded-sm shadow-md">Go back home</a>
         </div>
     </section>
 </div>
