--- a/src/client/GalleryPixels.UI/Shared/ImageModal.razor
+++ b/src/client/GalleryPixels.UI/Shared/ImageModal.razor
@@ -6,10 +6,10 @@
 <!-- Img modal -->
 <div class="@(ModalImg != null ? "" : "hidden") fixed top-0 left-0 z-80 w-screen h-[100lvh] bg-black/70 flex justify-center items-center">
     <!--  Clickable close background -->
-    <div class="fixed z-90 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
+    <div class="fixed z-50 inset-0 transition-opacity cursor-pointer" @onclick="CloseModal"></div>
 
     <img style="@(ModalScale > 1 ? GetScaleStyle() : string.Empty) @GetTranslatePos()"
-         class="max-h-full max-w-full object-contain transform cursor-grab select-none drag-none @(_panning ? "cursor-grabbing" : string.Empty)"
+         class="max-h-full max-w-full z-60 object-contain transform cursor-grab select-none drag-none @(_panning ? "cursor-grabbing" : string.Empty)"
          src="@ModalImg?.Url"
          alt=""
          draggable="false"
@@ -19,7 +19,7 @@
          @ondblclick="OnDoubleClick"/>
 
     <!-- The close button -->
-    <a class="fixed z-90 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark cursor-pointer"
+    <a class="fixed z-70 top-4 right-8 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark cursor-pointer"
        @onclick="CloseModal">
         <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
              stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-24 md:w-16 lg:w-8 h-auto">
@@ -29,7 +29,7 @@
     </a>
 
     <!-- The zoom button -->
-    <a class="fixed z-90 top-4 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark flex space-x-2 leading-none">
+    <a class="fixed z-70 top-4 p-1 rounded-xl bg-surface/90 dark:bg-surface-dark/90 text-on-surface dark:text-on-surface-dark flex space-x-2 leading-none">
         <div class="cursor-pointer" @onclick="ZoomInClicked">
             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                  stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-24 md:w-16 lg:w-8 h-auto">
