--- a/src/client/GalleryPixels.UI/Styles/site.css
+++ b/src/client/GalleryPixels.UI/Styles/site.css
@@ -1,23 +1,62 @@
 @import 'tailwindcss';
-
 @config '../tailwind.config.js';
 
-/*
-  The default border color has changed to `currentColor` in Tailwind CSS v4,
-  so we've added these compatibility styles to make sure everything still
-  looks the same as it did with Tailwind CSS v3.
+/* Enable dark mode via a class (so “dark:” variants work) */
+/*noinspection CssInvalidAtRule*/
+@custom-variant dark (&:where(.dark, .dark *));
 
-  If we ever want to remove these styles, we need to add an explicit border
-  color utility to any element that depends on these defaults.
-*/
-@layer base {
-  *,
-  ::after,
-  ::before,
-  ::backdrop,
-  ::file-selector-button {
-    border-color: var(--color-gray-200, currentColor);
-  }
+/* Define your design tokens directly in CSS */
+/*noinspection CssInvalidAtRule*/
+@theme {
+    /* Font families */
+    --font-helvetica: "Helvetica Neue", sans-serif;
+    --font-helvetica-black: "Helvetica Neue black", sans-serif;
+    
+    /* Misc colors */
+    --color-ultra-light-gray: #fcfcfc;
+    --color-discord: #7289DA;
+
+    /* Main color palette */
+    --color-primary: #009c82;
+    --color-primary-dark: #53ceb1;
+    --color-primary-variant: #85cee4;
+    --color-primary-variant-dark: #b8ffff;
+
+    --color-secondary: #c6c5bf;
+    --color-secondary-variant: #c6c5bf;
+    --color-secondary-dark: #f9f8f2;
+
+    --color-background: #F4F4F4;
+    --color-background-dark: #121212;
+
+    --color-surface: #FFFFFF;
+    --color-surface-dark: #333333;
+
+    --color-error: #B00020;
+    --color-error-dark: #CF6679;
+
+    --color-on-primary: #FFFFFF;
+    --color-on-primary-dark: #000000;
+    --color-on-primary-variant: #000000;
+    --color-on-primary-variant-dark: #000000;
+    --color-on-secondary: #000000;
+    --color-on-secondary-dark: #000000;
+    --color-on-background: #000000;
+    --color-on-background-dark: #FFFFFF;
+    --color-on-surface: #000000;
+    --color-on-surface-dark: #FFFFFF;
+    --color-on-error: #FFFFFF;
+    --color-on-error-dark: #000000;
+}
+
+/* Custom Utility: “drag-none” */
+/*noinspection CssInvalidAtRule*/
+@utility drag-none {
+    -webkit-user-drag: element;
+    -khtml-user-drag: none;
+    -moz-user-drag: none;
+    -o-user-drag: none;
+    user-drag: none;
 }
 
 /* fade image in after load */
