--- a/src/client/GalleryPixels.UI/_Imports.razor
+++ b/src/client/GalleryPixels.UI/_Imports.razor
@@ -8,3 +8,7 @@
 @using GalleryPixels.UI
 @using GalleryPixels.UI.Pages
 @using GalleryPixels.UI.Shared
+@using Microsoft.AspNetCore.Components.Authorization
+@using GalleryPixels.UI.Domain.Services
+@using GalleryPixels.UI.Shared.Images
+@using Microsoft.AspNetCore.Authorization
