--- a/src/client/GalleryPixels.UI/App.razor
+++ b/src/client/GalleryPixels.UI/App.razor
@@ -1,4 +1,5 @@
-﻿<CascadingAuthenticationState>
+﻿@using GalleryPixels.UI.Pages.Auth
+<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
