--- a/src/client/GalleryPixels.UI/_Imports.razor
+++ b/src/client/GalleryPixels.UI/_Imports.razor
@@ -12,3 +12,4 @@
 @using GalleryPixels.UI.Domain.Services
 @using GalleryPixels.UI.Shared.Images
 @using Microsoft.AspNetCore.Authorization
+@using GalleryPixels.UI.Services
