Moved services to correct folders

--- a/src/client/GalleryPixels.UI/Pages/Auth/Login.razor
+++ b/src/client/GalleryPixels.UI/Pages/Auth/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Auth/Login"
+@using GalleryPixels.UI.Infrastructure.Services
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 @inject ToastService ToastService
