--- a/src/client/GalleryPixels.UI/Shared/Images/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/Images/MasonryGrid.razor
@@ -1,5 +1,5 @@
-﻿@using GalleryPixels.UI.Domain.Models
-@using GalleryPixels.UI.Infrastructure.Services
+﻿@using GalleryPixels.UI.Application.Services
+@using GalleryPixels.UI.Domain.Models
 @inject IImagePlaceHolderService ImageService
 @inject IMagicGrid MagicGrid
 @inject IResizeListener Listener
