--- a/src/client/GalleryPixels.UI/Shared/Toast.razor
+++ b/src/client/GalleryPixels.UI/Shared/Toast.razor
@@ -1,4 +1,5 @@
-﻿@using GalleryPixels.UI.Enums
+﻿@using GalleryPixels.UI.Domain.Models
+@using GalleryPixels.UI.Infrastructure.Services
 @inject ToastService ToastService
 @implements IDisposable
 
