--- a/src/client/GalleryPixels.UI/Pages/Auth/Register.razor
+++ b/src/client/GalleryPixels.UI/Pages/Auth/Register.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Auth/Register"
+@using GalleryPixels.UI.Infrastructure.Services
 @inject IAuthService AuthService
 @inject ToastService ToastService
 @inject NavigationManager NavigationManager
