Implemented darkmode toggle

--- a/src/client/GalleryPixels.UI/Shared/MainLayout.razor
+++ b/src/client/GalleryPixels.UI/Shared/MainLayout.razor
@@ -1,6 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <Toast />
+<DarkModeToggle/>
 
 <div class="min-h-screen flex flex-col">
     <main class="flex flex-1 justify-center overflow-x-hidden">
