--- a/src/client/GalleryPixels.UI/Shared/Toast.razor
+++ b/src/client/GalleryPixels.UI/Shared/Toast.razor
@@ -1,6 +1,5 @@
 ﻿@using GalleryPixels.UI.Domain.Models
-@using GalleryPixels.UI.Infrastructure.Services
-@inject ToastService ToastService
+@inject IToastService ToastService
 @implements IDisposable
 
 @if (ShowMessage)
