--- a/src/client/GalleryPixels.UI/Shared/Images/MasonryGrid.razor
+++ b/src/client/GalleryPixels.UI/Shared/Images/MasonryGrid.razor
@@ -1,5 +1,4 @@
-﻿@using GalleryPixels.UI.Application.Services
-@using GalleryPixels.UI.Domain.Models
+﻿@using GalleryPixels.UI.Domain.Models
 @inject IImagePlaceHolderService ImageService
 @inject IMagicGrid MagicGrid
 @inject IResizeListener Listener
