--- a/src/client/GalleryPixels.UI/Pages/Auth/Login.razor
+++ b/src/client/GalleryPixels.UI/Pages/Auth/Login.razor
@@ -28,7 +28,7 @@
 @code {
     private string Email { get; set; } = string.Empty;
     private string Password { get; set; } = string.Empty;
-    private bool ShowMessage { get; set; } = false;
+    private bool ShowMessage { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
