--- a/src/client/GalleryPixels.UI/App.razor
+++ b/src/client/GalleryPixels.UI/App.razor
@@ -1,6 +1,6 @@
 ﻿@using GalleryPixels.UI.Pages.Auth
 <CascadingAuthenticationState>
-    <Router AppAssembly="@typeof(App).Assembly">
+    <Router AppAssembly="@typeof(App).Assembly" NotFoundPage="@typeof(Error404)">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
                 <NotAuthorized>
@@ -15,10 +15,5 @@
                 </NotAuthorized>
             </AuthorizeRouteView>
         </Found>
-        <NotFound>
-            <LayoutView Layout="@typeof(MainLayout)">
-                <Error404/>
-            </LayoutView>
-        </NotFound>
     </Router>
 </CascadingAuthenticationState>
