--- a/src/client/GalleryPixels.UI/Pages/Auth/Login.razor
+++ b/src/client/GalleryPixels.UI/Pages/Auth/Login.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Auth/Login"
+@page "/Login"
 @inject IAuthService AuthService
 @inject NavigationManager NavigationManager
 @inject IToastService ToastService
