--- a/src/client/GalleryPixels.UI/Pages/Auth/Register.razor
+++ b/src/client/GalleryPixels.UI/Pages/Auth/Register.razor
@@ -1,4 +1,5 @@
 ﻿@page "/Auth/Register"
+@page "/Register"
 @inject IAuthService AuthService
 @inject IToastService ToastService
 @inject NavigationManager NavigationManager
