--- a/src/client/GalleryPixels.UI/Shared/MainLayout.razor
+++ b/src/client/GalleryPixels.UI/Shared/MainLayout.razor
@@ -1,9 +1,11 @@
 ﻿@inherits LayoutComponentBase
+@using GalleryPixels.UI.Shared.Navigation
 
 <Toast />
 <DarkModeToggle/>
 
 <div class="min-h-screen flex flex-col">
+    <NavBar />
     <main class="flex flex-1 justify-center overflow-x-hidden">
         @Body
     </main>
